tests/golden/defaults/appuio-cloud-reporting/appuio-cloud-reporting/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    SYNMonitoring: main
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: appuio-cloud-reporting
    app.kubernetes.io/part-of: syn
    name: appuio-cloud-reporting
  name: appuio-cloud-reporting
