tests/golden/defaults/appuio-cloud-reporting/appuio-cloud-reporting/01_netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: appuio-cloud-reporting
    app.kubernetes.io/part-of: syn
    name: allow-from-appuio-cloud-reporting
  name: allow-from-appuio-cloud-reporting
  namespace: appuio-reporting
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: appuio-cloud-reporting
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: appuio-cloud-reporting
    app.kubernetes.io/part-of: syn
    name: allow-from-appuio-cloud-reporting
  name: allow-from-appuio-cloud-reporting
  namespace: appuio-thanos
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: appuio-cloud-reporting
  podSelector: {}
  policyTypes:
    - Ingress
